Fixed bug #29719 (fgetcsv() has problem parsing strings ending with escaped enclosures).